--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,13 +1,36 @@
 
 
 .scale-up-center{
-    animation:scale-up-center 0.4s; 
+    animation: scale-up-center 0.4s; 
 } 
+
+
+
+
+
+.rotate-scale-down{
+    animation:rotate-scale-down 0.4s linear both
+} 
+
+
+
+ /* keyframes */
+@keyframes rotate-scale-down{
+    0%{
+        transform:scale(1) rotateZ(0)
+    }
+    50%{
+        transform:scale(.5) rotateZ(180deg)
+    }
+    100%{
+        transform:scale(1) rotateZ(360deg)
+    }
+}
 @keyframes scale-up-center{
      0%{
-        transform:scale(.5)
+        transform: scale(.5)
     } 
     100%{
-        transform:scale(1)
+        transform: scale(1)
     }
  }
